# dicomSerieAndVectorDisplay

./: CMakeLists.txt  main.cpp  myvtkinteractorstyleimage.cpp  myvtkinteractorstyleimage.h  test2D.vtu
dicom/: 01.IMA  02.IMA  03.IMA  anon_01.dcm  anon_02.dcm  anon_03.dcm
